--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -64,7 +64,9 @@
 						</label>
 						<br>
 						<!--仮の日付選択-->
-						<input type="date" name="orderedOn" th:value=${orderedOn} required>
+						<label class="date2"><input type="date" name="orderedOn" th:value=${orderedOn} required></label>
+
+						<br>
 						<button>予約確定</button>
 					</form>
 
