--- a/src/main/resources/static/css/matsumoto.css
+++ b/src/main/resources/static/css/matsumoto.css
@@ -14,9 +14,15 @@ header button {
 
 .logo {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 1%;
+	left: 1%;
 	z-index: 50;
+}
+
+.hmhm {
+	text-align: -webkit-right;
+	margin-right: 32px;
+	margin-top: 16px;
 }
 
 .keyp {
@@ -89,9 +95,22 @@ nav {
 	transition-duration: .2s;
 }
 
+nav,
+footer {
+	background-color:rgb(0, 64, 128);
+	/* 背景色 */
+	text-align: center;
+	color: #ffffff;
+	/* 文字色 */
+	padding-top: 16px;
+	/* 内側余白(上) */
+	padding-bottom: 16px;
+	/* 内側余白(下) */
+}
+
 nav ul li a {
 	/*background-color: rgb(255, 255, 255);*/
-	color: #000000;
+	color: rgb(243, 243, 243);
 	display: block;
 	margin-bottom: 16px;
 }
@@ -134,6 +153,7 @@ main {
 table,
 th,
 td {
+
 	border-collapse: collapse;
 	border: 1px solid #7d8bae;
 }
@@ -158,7 +178,7 @@ button {
 
 /* 送信ボタン(マウスオーバー時) */
 button:hover {
-	background-color: #f1b2b2;
+	background-color: rgb(0, 0, 128);
 }
 
 /*.center {*/
