CSSデザイン追加

--- a/src/main/resources/static/css/Aikawa.css
+++ b/src/main/resources/static/css/Aikawa.css
@@ -8,6 +8,23 @@ header button {
 	font-family: 'M PLUS 1p', sans-serif;
 }
 
+.nav_logo {
+  position: absolute;
+  bottom: 30px;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+.nav_copyright {
+  position: fixed;
+  bottom: 10px; 
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+}
+
 .logo {
 
 	position: absolute;
