--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -37,6 +37,12 @@
 						<li><a href="/mypage">マイページ</a></li>
 						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')">LOGOUT</a></li>
 						<li><a href="">SERVICE</a></li>
+						 <a href="/hotels" class="nav_logo">
+                        <img src="/image/白休.com.png" width="10%" height="" alt="休.com Logo" />
+                         </a>
+						<p class="nav_copyright">
+                        © 2025 <a href="https://jajaaan.co.jp/">休.com Inc.</a> All Rights Reserved.
+                        </p>
 					</ul>
 				</nav>
 			</div>
