--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -5,12 +5,12 @@
     </a>
     <ul class="footer__navi flex">
       <li><a href="#">About</a></li>
-      <li><a href="#">サイトマップ</a></li>
-      <li><a href="#">プライバシーポリシー</a></li>
+      <!-- <li><a href="#">サイトマップ</a></li>
+      <li><a href="#">プライバシーポリシー</a></li> -->
     </ul>
   </div>
   <hr />
   <p class="copyright">
-    © 2023 <a href="https://jajaaan.co.jp/">休.com Inc.</a> All Rights Reserved.
+    © 2025 <a href="https://jajaaan.co.jp/">休.com Inc.</a> All Rights Reserved.
   </p>
 </footer>
