--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -8,10 +8,9 @@
 </head>
 
 <body style="text-align: center;">
-	<header th:replace="header2"></header>
+	<header th:replace="header2"></header><br>
 	<h3>宿の予約が完了しました<br>
 		<div class="login-container">
-
 			<div class="flex">
 				<img th:src="${hotels.image}" height="170px" alt="ホテル画像">
 				<div>
@@ -23,8 +22,6 @@
 				</div>
 			</div>
 		</div>
-
-			
 
 			ご利用ありがとうございます
 	</h3>
