--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
+	<div class="flex">
 	<header th:replace="header3"></header>
 	<br>
+	</div>
 	<hr>
 	<div class="center">
 		<h2 class="midashi">宿予約内容確認/クレジットカード情報・変更・登録</h2>
