--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-	<div class="flex">
+	<div class="image">
 	<header th:replace="header3"></header>
-	<br>
+	
 	</div>
+	<br>
 	<hr>
 	<div class="center">
 		<h2 class="midashi">宿予約内容確認/クレジットカード情報・変更・登録</h2>
