--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -43,7 +43,7 @@ th,
 td {
 	width: 14.28%;
 	text-align: center;
-	padding: 0.5em;
+/*	padding: 0.5em;*/
 }
 
 button.date-btn {
@@ -51,7 +51,7 @@ button.date-btn {
 	padding: 1em;
 	background: #ffffff;
 	border: 1px solid #ccc;
-	border-radius: 5px;
+/*	border-radius: 5px;*/
 	cursor: pointer;
 }
 
