--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="/css/matsumoto.css">
+	<link rel="stylesheet" type="text/css" href="/css/reservation.css">
 	<meta charset="UTF-8">
 	<title>宿予約内容確認</title>
 </head>
