--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -11,6 +11,6 @@
   </div>
   <hr />
   <p class="copyright">
-    © 2025 <a href="https://jajaaan.co.jp/">休.com Inc.</a> All Rights Reserved.
+    © 2025 <a href="/hotels">休.com Inc.</a> All Rights Reserved.
   </p>
 </footer>
