言語選択消しました

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -13,15 +13,15 @@
 			</form>
 			<form action="samplel.cgi" method="post" class="key4">
 
-				<label class="selectbox-3">
-					<select size="1" name="language">
-						<option value="Japanese">日本語</option>
-						<option value="English">English</option>
-						<option value="Chinese">中文</option>
-						<option value="Korean">한국어</option>
-						<option value="Rosian">Русский</option>
-					</select>
-				</label>
+<!--				<label class="selectbox-3">-->
+<!--					<select size="1" name="language">-->
+<!--						<option value="Japanese">日本語</option>-->
+<!--						<option value="English">English</option>-->
+<!--						<option value="Chinese">中文</option>-->
+<!--						<option value="Korean">한국어</option>-->
+<!--						<option value="Rosian">Русский</option>-->
+<!--					</select>-->
+<!--				</label>-->
 			</form>
 
 		</div>
