--- a/src/main/resources/templates/header3.html
+++ b/src/main/resources/templates/header3.html
@@ -30,7 +30,7 @@
 					<span></span>
 				</div>
 				<nav>
-					<ul style="list-style-type: none;">
+					<ul style="list-style-type: none; padding: 0px; text-align: left;">
 						<li><a href="/mypage" style="text-decoration: none; color: white;">マイページ</a></li>
 						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')" style="text-decoration: none; color: white;">LOGOUT</a></li>
 						<li><a href="" style="text-decoration: none; color: white;">SERVICE</a></li>
