--- a/src/main/resources/static/css/matsumoto.css
+++ b/src/main/resources/static/css/matsumoto.css
@@ -345,3 +345,17 @@ input[type="date"] {
 	color: #999;
 }
 
+.button-1 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100px;
+	margin: 0 auto;
+	padding: .9em 2em;
+	border: 1px solid #2589d0;
+	border-radius: 5px;
+	background-color: #fff;
+	color: #2589d0;
+	font-size: 1em;
+	margin-top: 5vh;
+}
