--- a/src/main/resources/static/css/reservation.css
+++ b/src/main/resources/static/css/reservation.css
@@ -81,7 +81,7 @@ nav {
 	top: 0;
 	right: 0;
 	width: 80%;
-	max-width: 400px;
+	max-width: 250px;
 	height: 100vh;
 	display: flex;
 	align-items: center;
@@ -108,12 +108,6 @@ footer {
 	/* 内側余白(下) */
 }
 
-nav ul li a {
-	/*background-color: rgb(255, 255, 255);*/
-	color: rgb(243, 243, 243);
-	display: block;
-	margin-bottom: 16px;
-}
 
 /*アクティブ*/
 .active #hmb span:first-child {
@@ -206,24 +200,21 @@ button:hover {
 
 }
 
-li {
-	color: #000000;
-	font-size: 20px;
-	font-family: 'M PLUS 1p', sans-serif;
-
+.flexErr{
+	display: flex;
+	align-items: flex-start;
 }
 
-.err li {
-	list-style-position: inside;
-	/* リストマークをコンテンツ内に配置 */
-	margin: 0 10px;
+.err{
 	/* 左右の余白を調整 */
 	color: red;
+	font-size: 15px;
+	font-family: 'M PLUS 1p', sans-serif;
 }
 
 .login-container {
-	max-height: 330px;
-	max-width: 900px;
+	max-height: 400px;
+	max-width: 1400px;
 	margin: 0 auto;
 	padding: 20px;
 	background-color: #fff;
