--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -88,6 +88,7 @@ header button {
 	margin-right: 32px;
 	margin-top: 24px;
 }
+
 #hmb {
 	width: 32px;
 	height: 28px;
@@ -95,6 +96,7 @@ header button {
 	position: relative;
 	z-index: 30;
 }
+
 .keyp {
 	top: 0;
 	width: 100%;
@@ -212,7 +214,7 @@ h4 {
 /* ヘッダー、ナビゲーションメニュー、フッター */
 nav,
 footer {
-	background-color:rgb(0, 64, 128);
+	background-color: rgb(0, 64, 128);
 	/* 背景色 */
 	text-align: center;
 	color: #ffffff;
@@ -701,7 +703,16 @@ label {
 /*.banner li {*/
 /*	list-style: none;*/
 /*}*/
-
+/*header3*/
+.hover-header3 {
+	list-style-type: none;
+	padding: 0px;
+	text-align: left;
+	font-weight: bold;
+}
+.hover-header3:hover{
+	color: #000000;
+}
 
 /*マイページ画面*/
 .mypage-name {
@@ -716,18 +727,20 @@ label {
 .mypage-wrapper {
 	display: flex;
 	justify-content: center;
-	align-items: center; /* 수직 중앙 정렬 */
+	align-items: center;
+	/* 수직 중앙 정렬 */
 	gap: 30px;
 	flex-wrap: wrap;
 	margin: 0 auto;
 	padding: 20px;
-	height: 300px; /* 필요시 명시적으로 높이 지정 */
+	height: 300px;
+	/* 필요시 명시적으로 높이 지정 */
 	max-width: 900px;
 }
 
 .mypage-form {
 	width: 300px;
-	height: 300px; 
+	height: 300px;
 	overflow: auto;
 	background-color: #fff;
 	padding: 15px;
@@ -737,12 +750,13 @@ label {
 	flex-direction: column;
 	align-items: center;
 	border-radius: 10px;
-	justify-content: space-evenly; /* 항목 간 균등 간격 */
+	justify-content: space-evenly;
+	/* 항목 간 균등 간격 */
 }
 
 .mypage-div {
 	width: 200px;
-	height: 200px; 
+	height: 200px;
 	background-color: #fff;
 	padding: 20px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -755,7 +769,7 @@ label {
 
 .mypage-image {
 	width: 200px;
-	height: 200px; 
+	height: 200px;
 	object-fit: cover;
 	border-radius: 166px;
 }
