--- a/src/main/resources/templates/header3.html
+++ b/src/main/resources/templates/header3.html
@@ -1,43 +1,48 @@
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<meta charset="UTF-8">-->
+<link rel="stylesheet" type="text/css" href="/css/mypage.css">
 <header id="header">
 	<a href="/hotels"><img src="/image/休.com.png" width="4.5%" class="logo"></a>
 	<div class="keyp">
 
-<!--		<div class="key">-->
-<!--			<form class="key1"><input input type="text" name="keyword" th:value="${keyword}" placeholder="キーワードを入力"-->
-<!--					class="poi2">-->
-<!--				<button class="poi3">検索</button>-->
-<!--			</form>-->
-<!--			<form action="/login" method="get">-->
-<!--				<span th:if="${account.name == null}"><button class="key2">ログイン</button></span>-->
-<!--				<span th:if="${account.name != null}" th:text="${account.name}+さんがログイン中"></span>-->
-<!--			</form>-->
-<!--			<form action="samplel.cgi" method="post" class="key4">-->
-<!--				<select size="1" name="language">-->
-<!--					<option value="Japanese">日本語</option>-->
-<!--					<option value="English">English</option>-->
-<!--					<option value="Chinese">中文</option>-->
-<!--					<option value="Korean">한국어</option>-->
-<!--					<option value="Rosian">Русский</option>-->
-<!--				</select>-->
-<!--			</form>-->
+		<!--		<div class="key">-->
+		<!--			<form class="key1"><input input type="text" name="keyword" th:value="${keyword}" placeholder="キーワードを入力"-->
+		<!--					class="poi2">-->
+		<!--				<button class="poi3">検索</button>-->
+		<!--			</form>-->
+		<!--			<form action="/login" method="get">-->
+		<!--				<span th:if="${account.name == null}"><button class="key2">ログイン</button></span>-->
+		<!--				<span th:if="${account.name != null}" th:text="${account.name}+さんがログイン中"></span>-->
+		<!--			</form>-->
+		<!--			<form action="samplel.cgi" method="post" class="key4">-->
+		<!--				<select size="1" name="language">-->
+		<!--					<option value="Japanese">日本語</option>-->
+		<!--					<option value="English">English</option>-->
+		<!--					<option value="Chinese">中文</option>-->
+		<!--					<option value="Korean">한국어</option>-->
+		<!--					<option value="Rosian">Русский</option>-->
+		<!--				</select>-->
+		<!--			</form>-->
 
-<!--		</div>-->
-<!--		<div class="key7">-->
-			<div class="hmhm">
-				<div id="hmb">
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-				<nav>
-					<ul style="list-style-type: none; padding: 0px; text-align: left;">
-						<li><a href="/mypage" style="text-decoration: none; color: white;">マイページ</a></li>
-						<li><a href="/logout" onclick="return confirm('ログアウトしますか？')" style="text-decoration: none; color: white;">LOGOUT</a></li>
-						<li><a href="" style="text-decoration: none; color: white;">SERVICE</a></li>
-					</ul>
-				</nav>
+		<!--		</div>-->
+		<!--		<div class="key7">-->
+		<div class="hmhm">
+			<div id="hmb">
+				<span></span>
+				<span></span>
+				<span></span>
 			</div>
+			<nav>
+				<ul class="hover-header3">
+					<li><a href="/mypage" style="text-decoration: none; color: white;">マイページ</a></li>
+					<li><a href="/logout" onclick="return confirm('ログアウトしますか？')"
+							style="text-decoration: none; color: white;">LOGOUT</a></li>
+					<li><a href="" style="text-decoration: none; color: white;">SERVICE</a></li>
+				</ul>
+			</nav>
 		</div>
+	</div>
 	</div>
 	<!--	JavaScript-->
 	<script>
