header3の中にマイページCSSが反映されるようになっていたので修正しました

--- a/src/main/resources/templates/header3.html
+++ b/src/main/resources/templates/header3.html
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html xmlns:th="http://www.thymeleaf.org">-->
 <!--<meta charset="UTF-8">-->
-<link rel="stylesheet" type="text/css" href="/css/mypage.css">
+<!--<link rel="stylesheet" type="text/css" href="/css/mypage.css">-->
 <header id="header">
 	<a href="/hotels"><img src="/image/休.com.png" width="4.5%" class="logo"></a>
 	<div class="keyp">
