--- a/src/main/resources/templates/header3.html
+++ b/src/main/resources/templates/header3.html
@@ -39,6 +39,12 @@
 					<li><a href="/logout" onclick="return confirm('ログアウトしますか？')"
 							style="text-decoration: none; color: white;">LOGOUT</a></li>
 					<li><a href="" style="text-decoration: none; color: white;">SERVICE</a></li>
+					 <!-- <a href="/hotels" class="nav_logo">
+                        <img src="/image/白休.com.png" width="10%" height="" alt="休.com Logo" />
+                         </a>
+						<p class="nav_copyright">
+                        © 2025 <a href="https://jajaaan.co.jp/">休.com Inc.</a> All Rights Reserved.
+                        </p> -->
 				</ul>
 			</nav>
 		</div>
