--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -829,3 +829,20 @@ col{
 .bottom{
 	margin-bottom: 30px;
 }
+
+/* .nav_logo {
+	position: absolute;
+	bottom: 30px;
+	left: 0;
+	width: 100%;
+	z-index: 2;
+}
+
+.nav_copyright {
+	position: fixed;
+	bottom: 10px;
+	left: 0;
+	width: 100%;
+	text-align: center;
+	z-index: 1;
+} */
